fixed missing background colors in desktop mode

--- a/assets/CSS/style.scss
+++ b/assets/CSS/style.scss
@@ -30,20 +30,14 @@ $font-roboto: "Roboto", sans-serif;
     --bs-btn-bg: var(--h4-n-dark-slate-gray);
     --bs-btn-border-color: #212529;
     --bs-btn-hover-color: var(--h4-n-white);
-    // --bs-btn-hover-bg: var(--h4-btn-gradient);
-    // --bs-btn-hover-border-color: #373b3e;
-    --bs-btn-focus-shadow-rgb: 66, 70, 73;
-    --bs-btn-active-color: #fff;
-    --bs-btn-active-bg: #4d5154;
-    --bs-btn-active-border-color: #373b3e;
-    --bs-btn-disabled-color: #fff;
-    --bs-btn-disabled-bg: #212529;
-    --bs-btn-disabled-border-color: #212529;
 }
 
 .btn-h4-dark:hover {
     background-image: var(--h4-btn-gradient);
     box-shadow: 0 10px 40px -3px var(--h4-btn-tomato);
+}
+
+.bg-h4-dark {
 }
 // Secondary colors
 
@@ -102,9 +96,18 @@ body {
     opacity: 0.6;
 }
 
+.container {
+    border-radius: 10px;
+}
+
+// DESKTOP code
+
 @media screen and (min-width: 992px) {
+    .body {
+        background: var(--h4-n-charcoal-grey);
+    }
     .custom-width {
-        max-width: 1440px;
+        max-width: 1000px;
     }
 
     .display-2 {
@@ -120,14 +123,10 @@ body {
         transform: translate(-50%, 50%);
     }
 
-    .container {
-        height: 90svh;
-    }
-
     .veil {
         position: absolute;
         top: 0;
-        background: hsl(235, 18%, 26%);
+        background: var(--h4-n-charcoal-grey);
         bottom: 0;
         left: 0;
         right: 0;
@@ -135,9 +134,11 @@ body {
 }
 
 /* Atribution */
-.attribution {
+.footer {
     font-size: 11px;
     text-align: center;
+    position: absolute;
+    bottom: 10px;
 
     & a {
         color: hsl(245, 46%, 45%);
